--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,7 @@ body, h1,h2,h3,h4,h5,h6, p, a, ul, li, ol, button, input, textarea, select{
     position: relative;
 }
 
-div#fomrContainer {
+div#formContainer {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -28,13 +28,13 @@ div#fomrContainer {
     grid-template-rows: 1fr 2fr 2fr;
 }
 
-div#fomrContainer > * {
+div#formContainer > * {
     display: block;
     width: 90%;
     margin: auto;
 }
 
-div#fomrContainer label.name {
+div#formContainer label.name {
     text-align: center;
     font-weight: bold;
     text-transform: uppercase;
@@ -45,13 +45,13 @@ div#fomrContainer label.name {
     font-size: 40px;
 }
 
-div#fomrContainer input#name {
+div#formContainer input#name {
     border-radius: 30px;
     height: 80%;
     font-size: 70px;
 }
 
-div#fomrContainer button.name {
+div#formContainer button.name {
     padding: 10px;
     width: 30%;
     border-radius: 30px;
@@ -61,7 +61,7 @@ div#fomrContainer button.name {
     transition: .6s;
 }
 
-div#fomrContainer button.name:hover {
+div#formContainer button.name:hover {
     background-color: #000;
     color: #fff;
 }
@@ -102,6 +102,7 @@ div#maincontainer div#userNameContent {
     border-radius: 30px;
     padding-left: 30px;
     font-size: x-large;
+    height: 70%;
 }
 
 div#gameSection {
