--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,19 @@
-body, h1,h2,h3,h4,h5,h6, p, a, ul, li, ol, button, input, textarea, select{
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+ul,
+li,
+ol,
+button,
+input,
+textarea,
+select {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
@@ -28,7 +43,7 @@ div#formContainer {
     grid-template-rows: 1fr 2fr 2fr;
 }
 
-div#formContainer > * {
+div#formContainer>* {
     display: block;
     width: 90%;
     margin: auto;
@@ -78,7 +93,7 @@ div#sidecontainer .prizes {
     background: #ffffffcc;
     width: 100%;
     border-radius: 20px;
-    min-height: 75px;
+    min-height: 65px;
 }
 
 div#sidecontainer .prizes p.prizesValue {
@@ -109,4 +124,3 @@ div#gameSection {
     display: grid;
     grid-template-rows: 1fr 1fr;
 }
-
